compiler/tools/fpp-check/test/system/invalid_module.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/system/invalid_module.fpp:2.11
system S: M
          ^
error: invalid use of symbol M: not a topology symbol
symbol is defined here:
[ local path prefix ]/compiler/tools/fpp-check/test/system/invalid_module.fpp:1.1
module M {}
^
